# VitaStellar-Contracts

./: CONTRIBUTING.md  makefile
contracts/anomaly_detection/: Cargo.toml
contracts/anomaly_detection/src/: lib.rs
contracts/anomaly_detector/src/: lib.rs  test.rs
contracts/appointment_booking_escrow/src/: lib.rs
contracts/audit_forensics/src/: lib.rs  test.rs
contracts/common_error/src/: lib.rs
contracts/contract_monitoring/: Cargo.toml
contracts/contract_monitoring/src/: lib.rs
contracts/contract_template/: Cargo.toml
contracts/contract_template/src/: errors.rs  lib.rs  reentrancy.rs  storage.rs
contracts/contract_verification/src/: lib.rs
contracts/credential_registry/src/: lib.rs
contracts/cross_chain_access/src/: lib.rs  test.rs
contracts/cross_chain_enhancements/src/: lib.rs
contracts/cross_chain_identity/src/: lib.rs  test.rs
contracts/crypto_registry/src/: benchmarks.rs  lib.rs  test.rs
contracts/emr_integration/src/: benchmarks.rs  lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: errors.rs  lib.rs  status.rs  withdraw.rs
contracts/explainable_ai/: Cargo.toml
contracts/explainable_ai/src/: lib.rs
contracts/fido2_authenticator/src/: lib.rs
contracts/governor/: Cargo.toml
contracts/governor/src/: lib.rs
contracts/healthcare_payment/src/: lib.rs
contracts/healthcare_reputation/src/: lib.rs
contracts/homomorphic_registry/src/: lib.rs
contracts/identity_registry/src/: lib.rs
contracts/ihe_integration/src/: lib.rs
contracts/iot_device_management/src/: errors.rs  events.rs  lib.rs
contracts/medical_consent_nft/src/: lib.rs
contracts/medical_record_backup/src/: lib.rs  test.rs
contracts/medical_record_search/: Cargo.toml
contracts/medical_record_search/src/: lib.rs  test.rs
contracts/medical_records/src/: crypto.rs  lib.rs
contracts/mpc_manager/src/: lib.rs
contracts/notification_system/src/: lib.rs  test.rs
contracts/patient_risk_stratification/src/: lib.rs
contracts/payment_router/src/: lib.rs
contracts/pharma_supply_chain/src/: lib.rs
contracts/predictive_analytics/src/: lib.rs
contracts/public_health_surveillance/src/: lib.rs
contracts/reentrancy_guard/: Cargo.toml
contracts/reentrancy_guard/src/: lib.rs
contracts/reputation_access_control/src/: lib.rs
contracts/sut_token/src/: lib.rs  test.rs
contracts/timelock/: Cargo.toml
contracts/timelock/src/: errors.rs  lib.rs  time_dependent_tests.rs
contracts/token_sale/src/: contract.rs  errors.rs  storage.rs  test.rs
contracts/upgrade_manager/src/: lib.rs  test.rs
contracts/upgradeability/: Cargo.toml
contracts/upgradeability/src/: lib.rs  test.rs
contracts/zk_verifier/src/: lib.rs
contracts/zkp_registry/src/: lib.rs
docs/: CROSS_CHAIN_INTERACTION_FLOW.md  ERROR_CODES.md  MASTER_THREAT_MODEL.md
tests/integration/: medical_records.rs  upgrade_manager_migration.rs
tests/utils/: assertions.rs  contract_utils.rs  performance.rs  test_data.rs
