[package]
name = "governor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true
common_error = { path = "../common_error" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
timelock = { path = "../timelock" }

[features]
default = []
testutils = ["soroban-sdk/testutils"]