[package]
name = "upgradeability"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "21.7.7" }
common_error = { path = "../common_error" }

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
testutils = ["soroban-sdk/testutils"]
